--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,10 @@ button {
   cursor: pointer;
 }
 
+p {
+  white-space: pre-wrap;
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 2.6rem;
